--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,12 @@ button {
   border-radius: .5rem;
   text-align: center;
   font-size: 1.4rem;
-  display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 #notification.show {
   display: block;
+  opacity: 1;
 }
 
