--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   outline: none;
   border: none;
+  text-transform: capitalize;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
 }
@@ -27,7 +28,7 @@ body {
   align-items: center;
   position: relative;
   height: 25rem;
-  background: url(back1.jpeg);
+  background: url(back2.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,41 +40,16 @@ body {
   padding: 1rem;
   font-size: 1.6rem;
   border-radius: 3rem;
-  border: .2rem solid burlywood;
+  border: 2px solid burlywood;
 }
 
 .input button {
-  display: inline-block;
+  display: block;
   position: absolute;
   margin-top: 13rem;
-  width: 10rem;
-  height: 4rem;
-  border: .2rem solid burlywood;
-  border-radius: 1rem;
-  color: #130f40;
-  background: burlywood;
-  font-size: 1.8rem;
-  cursor: pointer;
-}
-
-.output {
-  margin: 0;
-  padding: 5rem;
-  color: black;
-  font-weight: 600;
-  font-size: 2rem;
-  white-space: pre-line;
-}
-
-button {
-  display: none;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin-top: 13rem;
-  width: 10rem;
-  height: 4rem;
-  border: .2rem solid burlywood;
+  width: 12rem;
+  height: 6rem;
+  border: 2px solid burlywood;
   border-radius: 1rem;
   color: #130f40;
   background: burlywood;
@@ -82,19 +58,42 @@ button {
 }
 
 #notification {
-  margin-top: 1rem;
-  color: #ff7782;
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: .5rem;
-  text-align: center;
-  font-size: 1.4rem;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+    margin-top: 10px;
+    color: #ff7782;
+    background-color:  #f6f6f9;
+    padding: 10px; 
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20px;
+}
+  
+#notification.hidden {
+      display: none;
+}
+  
+#notification.success {
+    background-color: green;
+}
+  
+#notification.error {
+    background-color: red;
 }
 
+#notification.loading {
+    background-color: orange;
+    color: white;
+    font-size: 16px;
+}
+  
 #notification.show {
-  display: block;
-  opacity: 1;
+    display: block;
 }
 
+.warning {
+  margin-top: 5rem;
+  background-color: red;
+  font-size: 1.7rem;
+  height: 5rem;
+  text-align: center;
+  padding-top: 1.3rem;
+}
