--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   outline: none;
   border: none;
-  text-transform: capitalize;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
 }
@@ -28,7 +27,7 @@ body {
   align-items: center;
   position: relative;
   height: 25rem;
-  background: url(back2.jpeg);
+  background: url(back1.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -44,11 +43,36 @@ body {
 }
 
 .input button {
-  display: block;
+  display: inline-block;
   position: absolute;
   margin-top: 13rem;
-  width: 12rem;
-  height: 6rem;
+  width: 10rem;
+  height: 4rem;
+  border: 2px solid burlywood;
+  border-radius: 1rem;
+  color: #130f40;
+  background: burlywood;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.output {
+  margin: 0;
+  padding: 5rem;
+  color: black;
+  font-weight: 600;
+  font-size: 2rem;
+  white-space: pre-line;
+}
+
+button {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 13rem;
+  width: 10rem;
+  height: 4rem;
   border: 2px solid burlywood;
   border-radius: 1rem;
   color: #130f40;
@@ -58,42 +82,18 @@ body {
 }
 
 #notification {
-    margin-top: 10px;
-    color: #ff7782;
-    background-color:  #f6f6f9;
-    padding: 10px; 
-    border-radius: 5px;
-    text-align: center;
-    font-size: 20px;
-}
-  
-#notification.hidden {
-      display: none;
-}
-  
-#notification.success {
-    background-color: green;
-}
-  
-#notification.error {
-    background-color: red;
-}
-
-#notification.loading {
-    background-color: orange;
-    color: white;
-    font-size: 16px;
-}
-  
-#notification.show {
-    display: block;
-}
-
-.warning {
-  margin-top: 5rem;
-  background-color: red;
-  font-size: 1.7rem;
-  height: 5rem;
+  margin-top: 10px;
+  color: var(--clr-danger);
+  background-color: var(--clr-white);
+  padding: 10px;
+  border-radius: 5px;
   text-align: center;
-  padding-top: 1.3rem;
+  font-size: 14px;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+
+#notification.show {
+  display: block;
+  opacity: 1;
 }
